[package]
name = "play-nice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bevy = "0.12.1"
clap = { version = "4.4.10", features = ["derive", "cargo", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
interpolation = "0.3.0"
maplit = "1.0.2"
ordered-float = "4.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
